add smart gold miners strategy and evaluator